[package]
name = "match_maker_interview"
version = "0.1.0"
authors = ["grahamschock <gschock@gwu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = {version = "1.0.123", features = ["derive"]}
